--- a/mommy/templates/base.html
+++ b/mommy/templates/base.html
@@ -55,30 +55,30 @@
       <li class="nav-item"  >
         <a class="nav-link" href="{% url 'my_prescriptions' %}">My Prescription</a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" href="{% url 'baby_clothes' %}">baby_clothes</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'yt' %}">videos</a>
+ -->      <li class="nav-item">
+        <a class="nav-link" href="{% url 'yt' %}">Videos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'insurance' %}">insurance</a>
+        <a class="nav-link" href="{% url 'insurance' %}">Insurance</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'govt' %}">govt</a>
+        <a class="nav-link" href="{% url 'govt' %}">Govt Schemes and policies</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'vaccine' %}">vaccine</a>
+        <a class="nav-link" href="{% url 'vaccine' %}">Vaccination</a>
       </li>
-       <li class="nav-item">
+      <!--  <li class="nav-item">
         <a class="nav-link" href="{% url 'babysitter' %}">babysitter</a>
-      </li>
+      </li> -->
       <li class="nav-item">
         <a class="nav-link" href="{% url 'health_nutrition' %}">Health and Nutrition</a>
       </li>
-      <li class="nav-item"  >
+      <!-- <li class="nav-item"  >
         <a class="nav-link" href="{% url 'home' %}">Posts</a>
-      </li>
+      </li> -->
       {% endif %}
       <li class="nav-item">
         <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
