--- a/mommy/templates/govt.html
+++ b/mommy/templates/govt.html
@@ -2,5 +2,17 @@
 {% block content %}
 <div class="container">
 <h2>Government Policies ans Schemes to help you upbring your child</h2>
+<li><b>1. PM Jan Dhan Yojana:</b><br>It is also known as the Pregnancy Aid Scheme. In India where more than 60% of the population lives below the poverty line, it becomes very difficult for a family to take good care of a pregnant woman. The aim of this program is to provide financial support to these women who can, in turn, nourish themselves and take proper medical aid during their pregnancy.</li><br>
+<li><b>2. Pradhan Mantri Surakshit Matritva Abhiyan:</b><br>The Pradhan Mantri Surakshit Matritva Abhiyan was launched by the Ministry of Health & Family Welfare (MoHFW), Government of India. The program’s aim is to provide timely and quality antenatal care, free of cost, universally to all pregnant women on the 9th of every month. This yojana collaborates with private-sector doctors to volunteer for free and visit these places where there aren’t proper medical facilities. They conduct these health checkups at government hospitals.</li><br>
+<li><b>3. Rajiv Gandhi National Crèche Scheme for Children of Working Mothers:</b><br>No matter however proficient or devoted a mother is, her kid will forever be her priority. She is going to give up her well-settled job and career to care for her children if she doesn’t have help at hand. So, as to cut back this dropout, which has been on the rise in our country, the Government has come up with this scheme in 2006.
+
+    There has been a huge increase in the options of job opportunities for ladies. Also, the requirement to support the family financially thanks to increasing inflation, this can be a welcome step for all. The scheme offers day-care facilities, improved nutrition, immunization facilities, sleeping facilities, and has set the stage for higher physical, mental and social growth of kids of working women. All the women who wish to continue their career must avail of this brilliant scheme.</li><br>
+<li><b>4. Pulse Polio:</b><br>It is one of the most path-breaking schemes that the Indian Government has come up with. It is an immunization campaign began by the government of India to completely eradicate poliomyelitis (polio) in India by vaccinating all children under the age of five years against the poliovirus. The government sets up camps regularly to vaccinate children and government officials also visit residences moving around the door to door administering the dose.</li><br>
+<li><b>5. Rashtriya Bal Swasthya Karyakram:</b><br>It was launched to provide child health care screening at states where there is a dearth of medical facilities. Mobile health teams are organized to visit these places and conduct thorough examinations. They also conduct health screening for children from the age of 0 to 6 at Anganwadi Centres twice a year. It covers 30 common health conditions in children.</li><br>
+<li><b>6. National Deworming Day:</b><br>The Ministry of Health and Welfare has dedicated a day to combat soil-transmitted infections in children. During this campaign, school teachers and workers administered a single dose of Albendazole to children.
+
+</li><br>
+
+
 </div>
 {% endblock %}
