--- a/mommy/templates/base.html
+++ b/mommy/templates/base.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
    
-    <title>{% block title %}Mom{% endblock %}</title>
+    <title>{% block title %}MeraAnsh{% endblock %}</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #bee8e5;">
@@ -73,9 +73,9 @@
       <!--  <li class="nav-item">
         <a class="nav-link" href="{% url 'babysitter' %}">babysitter</a>
       </li> -->
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" href="{% url 'health_nutrition' %}">Health and Nutrition</a>
-      </li>
+      </li> -->
       <!-- <li class="nav-item"  >
         <a class="nav-link" href="{% url 'home' %}">Posts</a>
       </li> -->
