--- a/mommy/templates/insurance.html
+++ b/mommy/templates/insurance.html
@@ -2,5 +2,23 @@
 {% block content %}
 <div class="container">
 <h2>Ensure your child's future</h2>
+<br>
+<!-- <h2 class="s-heading">Top Health Insurance Plans For Your Newborn</h2>
+ --><h3 class="s-heading">1. Bajaj Allianz Health Care Supreme</h3>
+<p>The plan is a comprehensive health plan. The Bajaj Allianz Health Care Supreme offers a coverage Rs 5 lakh-Rs 50 lakh. However, it is offered as a part of its maternity section, a newborn Child Plans is covered with a sum of up to Rs 1 lakh, up to 90 days of his age. Additionally, the plan comes out with a wide range of both inbuilt benefits and add-on coverage features and allows you to customize the coverage as per your requirements. The main feature of Bajaj Allianz Health Care Supreme are:</p>
+<ul class="list-ul"><li>Covers physiotherapy expenses</li><li>Offers both maternity and newborn baby cover</li><li>The cover provides coverage for medical treatments of the newborn and vaccination expenses up to the first 90 days</li></ul>
+
+<hr>
+<h3 class="s-heading">2. Apollo Munich Easy Health Insurance</h3><p>Generally, the family floater policy under Apollo Munich easy Health Insurance includes up to two adults and five children in a single policy. For being eligible for the policy the children should be aged 91 days to 25 years. If the policyholder adds newborn baby benefit by paying an extra premium, then the children between 1 to days of age can also be covered. The Apollo Munich's Easy Health plan offers three variants and the newborn baby plan is there in the last two variants. The variants are named as Exclusive and Premium. However, it is an optional cover that can be added if required. Some features of the plan include:</p><ul class="list-ul"><li>Sum insured going up to Rs 50 lakh</li><li>Daily cash benefit for accompanying a minor child and choosing shared accommodation</li><li>The coverage limit for the newborn ranges from Rs 2000 to Rs 5000</li></ul>
+<hr>
+
+<h3 class="s-heading">3. Max Bupa Heartbeat Family First Health Insurance</h3><p>The Max Bupa Heartbeat Family First Health Insurance plan provides coverage for a maximum of 14 family members. Under this plan, the newborn baby is covered as an insured individual from birth without any extra premium. And, in case the maternity claim is part of the policy, this facility is applicable until the next policy year. For the first year, the company covers vaccination expenses of the newborns, if the individual includes the baby in the plan for the next year of the policy. Additionally, this plan comes in two variants of Silver and Gold with coverage going up to Rs15 lakh. Some features of the Max Bupa Heartbeat Family First Health Insurance are:</p><ul class="list-ul"><li>Till the sum assured limit, the newborn baby cover is available</li><li>Even if it is more than 90 days, the newborn baby is covered until the end of the policy term</li><li>Till the baby reaches one year of age, the plan offers coverage is for the vaccination of the newborn baby</li></ul>
+<hr>
+
+
+<h3 class="s-heading">4. ICICI Lombard</h3><p>Luckily there are multiple plans under ICICI Lombard Health Insurance that include maternity and newborn expenses, namely Health Protect Plus, Health Smart and Health Smart Plus. Under the plans generally, the newborns are covered during hospitalization from the day one of the birth till 91 days. The plan allows both inbuilt and optional coverage benefits. The salient features of ICICI Lombard health insurance for a newborn include:</p><ul class="list-ul"><li>Reinstatement of the sum insured by 100%</li><li>Wellness programs to promote the motto of healthy living</li><li>The newborn baby cover is available along with maternity coverageat an additional premium</li><li>The newborn benefit covers the newborn baby for up to 91 days from the date of birth</li></ul>
+<hr>
+
+<h3 class="s-heading">5. Religare Health Insurance</h3><p>The Religare Health Insurance Company offers two plans under its maternity and newborn cover. The names of the plans are Joy Today and Joy Tomorrowwhich offersa maternity cover with a short waiting period only. A maximum of Rs 30,000 and Rs 50,000 is covered for the insured sum of Rs 3 lakh and Rs 5 lakh, under both the plans. Additionally, under the Joy Tomorrow plan, a lump sum of Rs 50,000 is covered for newborn birth defects. Salient features of Religare Health Insurance include:</p><ul class="list-ul"><li>The plan offers maternity waiting period of nine months only under Today variant</li><li>The cover for the newborn baby is available up to Rs 50, 000</li><li>Under the Tomorrow variant, the plan also covers birth defects of the baby</li></ul>
 </div>
 {% endblock %}
