--- a/mommy/templates/yt.html
+++ b/mommy/templates/yt.html
@@ -2,5 +2,17 @@
 {% block content %}
 <div class="container">
 <H2>Videos to guide you specially made for you according to your pregnancy timeline</H2>
+<iframe width="500" height="315" src="https://www.youtube.com/embed/WH9ZJu4wRUE" title="YouTube video player"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+<iframe width="500" height="315" src="https://www.youtube.com/embed/UA-Tk9qlG9A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+<br><br><br>
+<iframe width="500" height="315" src="https://www.youtube.com/embed/gY5CLjmfhvo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+
+<iframe width="500" height="315" src="https://www.youtube.com/embed/w0iDfcAYZWc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br><br><br>
+<iframe width="500" height="315" src="https://www.youtube.com/embed/abPSUDM0v5k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="500" height="315" src="https://www.youtube.com/embed/h8xIgL-sVwI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br><br><br>
+<iframe width="500" height="315" src="https://www.youtube.com/embed/qUqZAKaDRBc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="500" height="315" src="https://www.youtube.com/embed/I6_Y1TtPGsI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 {% endblock %}
