--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -4,6 +4,9 @@
     <title>{% block head_title %}{% endblock %}</title>
     {% block extra_head %}
     {% endblock %}
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
   </head>
   <body>
     {% block body %}
@@ -18,6 +21,7 @@
       </ul>
     </div>
     {% endif %}
+
     {% block content %}
     {% endblock %}
     {% endblock %}
