--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -6,6 +6,7 @@
 
 {% block content %}
 <div class="container">
+	<br><br>
 <h1>{% trans "Sign Out" %}</h1>
 
 <p>{% trans 'Are you sure you want to sign out?' %}</p>
@@ -15,7 +16,7 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <button type="submit">{% trans 'Sign Out' %}</button>
+  <button type="submit" class="btn btn-primary">{% trans 'Sign Out' %}</button>
 </form>
 
 </div>
